Cleaning up the code, added comments

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
 
-    <!-- Kontaktsektion -->
+    <!-- Contact Section -->
     <main class="min-h-screen flex flex-col justify-center items-center pb-40">
       <form action="#" method="POST" class="w-full max-w-2xl bg-black text-white p-12 rounded-lg shadow-lg mt-[-220px] space-y-6 z-99">
         <div class="z-99">
