Uppdaterade typografi, färger och layoutjusteringar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="flex justify-between items-center mt-[537px] w-full max-w-[1280px]">
         <div class="max-w-[384px]">
           <p class="text-[16px] text-white font-extralight font-figtree">
-            <span class="font-semibold text-white">precision</span> möter
+            <span class="font-semibold text-white">Precision</span> möter
             <span class="font-semibold text-white">kreativitet</span> med fokus på funktion,
             estetik och användarupplevelse. Genom noggrann design och modern webbutveckling
             formar jag interaktiva lösningar som engagerar och inspirerar.
